# plusplus

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: guardian-live.yml  integration.yml  linux.yml  macos.yml  quality.yml  release.yml  windows.yml
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/app/: Cargo.toml  build.rs
crates/app/assets/icon/: build.sh  icon.icns
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: introspect_pg.rs
crates/core/src/: audit.rs  bookmarks.rs  clipboard.rs  coerce.rs  config.rs  database.rs  erd.rs  error.rs  export.rs  favorites.rs  history.rs  import.rs  lib.rs  model.rs  safety.rs  secrets.rs  tunnel.rs  value.rs
crates/core/src/backends/: cassandra.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
crates/core/tests/: live_backends.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  autocomplete.rs  edit.rs  emoji.rs  erd.rs  filter.rs  format.rs  ghost.rs  grid.rs  highlight.rs  icons.rs  lib.rs  pet.rs  schema.rs  sqlctx.rs  style.rs  theme.rs  title_bar.rs  update.rs
crates/ui/src/app/: actions.rs  connection.rs  edits.rs  journal.rs  layout.rs  messages.rs  navigate.rs  panels.rs  panels_test.rs  query.rs  tabs.rs  tests.rs  transfer.rs  widgets.rs  workspace.rs
crates/ui/src/components/: badge.rs  button.rs  dialog.rs  feedback.rs  input.rs  mod.rs  tabs.rs  toolbar.rs
docs/: LAUNCH.md  PLATFORM_SIGNING.md  RELEASE_SIGNING.md  THEMES.md
docs/screenshots/: README.md
examples/: sample.sql  sample.sqlite
examples/themes/: copper-circuit.json  dracula.json  lotus-dusk.json  tidal-ledger.json
packaging/linux/: make-appimage.sh  plusplus.desktop
packaging/macos/: install.sh  make-dmg.sh  uninstall.sh
packaging/macos/assets/: background.tiff  build-background.sh
packaging/windows/: make-zip.sh
reafactor/: ui-refactor-plan.md
scripts/: linux-build.sh  linux-deps.sh  readme-banner.py  release.sh  version.sh
