# Workspace manifest for plusplus — a native Rust database GUI (TablePlus-in-Rust).
# The data/analysis layers (`core`, `analysis`) are kept free of any GUI dependency
# so they can be unit-tested without a window.
[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/analysis",
    "crates/ui",
    "crates/app",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"

# Shared, version-pinned dependencies. Individual crates opt in via `*.workspace = true`.
[workspace.dependencies]
# --- internal crates ---
# Imported as `dbcore` (not `core`) so it doesn't shadow Rust's std `core` crate in
# dependents, which would break macro expansions that reference `::core::`.
dbcore = { path = "crates/core", package = "plusplus-core" }
analysis = { path = "crates/analysis", package = "plusplus-analysis" }
ui = { path = "crates/ui", package = "plusplus-ui" }

# --- GUI ---
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["datepicker", "svg"] }
egui_plot = "0.34"

# --- async runtime ---
# net + io-util back the SSH tunnel's local listener and byte pump.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }

# --- database access ---
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    # rustls with the system trust store, so verify-ca/verify-full work against real
    # CAs out of the box. ring matches the rustls stack tiberius already pulls in.
    "tls-rustls-ring-native-roots",
    "postgres",
    "mysql",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }

# --- SQL Server (sqlx dropped MSSQL after 0.6, so it needs its own TDS driver) ---
# rustls (not native-tls) keeps us off a system OpenSSL dep on Linux, matching keyring.
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono"] }
bb8 = "0.9"
bb8-tiberius = "0.16"

# --- SSH tunnel (connect to a database through a bastion host) ---
# Pure-Rust SSH on tokio. The `ring` backend (instead of the default aws-lc-rs) keeps the
# whole tree on the single ring crypto stack that rustls/tiberius/sqlx already use.
russh = { version = "0.54", default-features = false, features = ["flate2", "ring", "rsa"] }

# --- data analysis ---
polars = { version = "0.54", default-features = false, features = ["lazy", "describe", "dtype-full"] }

# --- SQL formatting (the query editor's Beautify action) ---
sqlformat = "0.5"

# --- supporting crates ---
# Stream combinators for row-by-row fetches (both sqlx and tiberius already pull this in).
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# GitHub Releases check + streamed DMG download for in-app updates.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# Verify the Ed25519 (minisign) signature of a downloaded update before installing it.
# Tiny, single-purpose, no_std-friendly — pairs with the `minisign` CLI used to sign releases.
minisign-verify = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
arboard = "3"
# keyring 4.x is a disruptive rewrite (CLI + keyring-core split); 3.6 is the mature
# `Entry` library API. crypto-rust avoids a system OpenSSL dep on Linux.
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Date type consumed by egui_extras' DatePickerButton (already in-tree via egui_extras).
jiff = "0.2"

[profile.release]
opt-level = 3
lto = "thin"

# Build dependencies (incl. the GUI/DB stack) optimized even in dev builds so the
# grid stays smooth while iterating. Our own crates stay at dev opt-level for fast builds.
[profile.dev.package."*"]
opt-level = 2
