[package]
name = "plusplus-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "eframe entry point that wires the UI, data, and analysis layers together."

[[bin]]
name = "plusplus"
path = "src/main.rs"

[dependencies]
dbcore.workspace = true
ui.workspace = true
eframe.workspace = true
egui.workspace = true
