[package]
name = "plusplus-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "eframe entry point that wires the UI, data, and analysis layers together."

[[bin]]
name = "plusplus"
path = "src/main.rs"

[dependencies]
dbcore.workspace = true
ui.workspace = true
eframe.workspace = true
egui.workspace = true

# AppKit access to fix titlebar hit-testing (see `fix_titlebar_click_through` in main.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
raw-window-handle = "0.6"

# Embeds the .ico + version info into the exe (see build.rs).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
