[package]
name = "plusplus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Backend-agnostic database abstraction: connections, schema introspection, query execution."

# NB: the lib is NOT named `core` — that shadows Rust's std `core` crate and breaks
# macro expansions (e.g. thiserror's `::core::convert`). Dependents still import it as
# `core` via the workspace dependency rename in the root Cargo.toml.
[lib]
name = "plusplus_core"
path = "src/lib.rs"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
futures-util.workspace = true
# SQL Server: tiberius is the TDS driver; bb8 gives it the pooling sqlx provides natively.
tiberius.workspace = true
bb8.workspace = true
bb8-tiberius.workspace = true
# SSH tunnel for connecting through a bastion host.
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
keyring.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
