[package]
name = "plusplus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Backend-agnostic database abstraction: connections, schema introspection, query execution."

# NB: the lib is NOT named `core` — that shadows Rust's std `core` crate and breaks
# macro expansions (e.g. thiserror's `::core::convert`). Dependents still import it as
# `core` via the workspace dependency rename in the root Cargo.toml.
[lib]
name = "plusplus_core"
path = "src/lib.rs"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
# CancellationToken: backends race the running query against it to support cancellation.
tokio-util.workspace = true
futures-util.workspace = true
# SQL Server: tiberius is the TDS driver; bb8 gives it the pooling sqlx provides natively.
tiberius.workspace = true
bb8.workspace = true
bb8-tiberius.workspace = true
# Cassandra / ScyllaDB: the CQL native-protocol driver (its Session is itself a pool).
scylla.workspace = true
# TLS config for the scylla session (ring provider + CA loading), matching the app's stack.
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-native-certs.workspace = true
# SSH tunnel for connecting through a bastion host.
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
keyring.workspace = true
sqlparser.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
