[package]
name = "plusplus-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "egui views, widgets and application state for plusplus."

[lib]
name = "ui"
path = "src/lib.rs"

[dev-dependencies]
async-trait.workspace = true

[dependencies]
dbcore.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tokio.workspace = true
rfd.workspace = true
arboard.workspace = true
# Used to validate edited date/time cells against the expected format before staging them.
chrono.workspace = true
# Token-based SQL beautifier behind the editor's Beautify (Cmd/Ctrl+I) action.
sqlformat.workspace = true
