[package]
name = "plusplus-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "egui views, widgets and application state for plusplus."

[lib]
name = "ui"
path = "src/lib.rs"

[dev-dependencies]
async-trait.workspace = true
# Headless rendering harness used to snapshot the UI to PNG (Metal/wgpu offscreen).
egui_kittest = { version = "0.34", features = ["wgpu", "snapshot"] }

[dependencies]
dbcore.workspace = true
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
tokio.workspace = true
reqwest.workspace = true
# Verifies the minisign signature of a downloaded update before it is installed.
minisign-verify.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
rfd.workspace = true
arboard.workspace = true
# Used to validate edited date/time cells against the expected format before staging them.
chrono.workspace = true
# Token-based SQL beautifier behind the editor's Beautify (Cmd/Ctrl+I) action.
sqlformat.workspace = true
# Date type consumed by egui_extras' DatePickerButton (the Details panel date picker).
jiff.workspace = true
